--- a/.github/workflows/tf-gha-deploy-infra.yml
+++ b/.github/workflows/tf-gha-deploy-infra.yml
@@ -143,7 +143,7 @@ jobs:
           echo "latest_digest=${DIGEST}" >> $GITHUB_OUTPUT
 
   deploy-azure-resources:
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
     needs: [get-config, get-latest-image-digest]
     uses: ./.github/workflows/tf-gha-install-terraform.yml
     with:
