--- a/.github/workflows/tf-gha-install-terraform.yml
+++ b/.github/workflows/tf-gha-install-terraform.yml
@@ -360,19 +360,22 @@ jobs:
         ARM_SUBSCRIPTION_ID: ${{ secrets.subscriptionId }}
         ARM_TENANT_ID: ${{ secrets.tenantId }}     
     - name: Terraform Plan
-      run: terraform -chdir=${{ inputs.terraform_workingdir }} plan -out=plan.tfplan -input=false \
-        -var "location=${{ inputs.terraform_plan_location }}" \
-        -var "branch_name=${{ inputs.branch_name }}" \
-        -var "prefix=${{ inputs.namespace }}" \
-        -var "postfix=${{ inputs.postfix }}" \
-        -var "environment=${{ inputs.environment }}" \
-        -var "image_digest=${{ inputs.image_digest }}" \
-        -var "client_secret=${{ env.ARM_CLIENT_SECRET }}"
+      run: |
+        terraform -chdir=${{ inputs.terraform_workingdir }} plan \
+          -out=plan.tfplan \
+          -input=false \
+          -var "location=${{ inputs.location }}" \
+          -var "branch_name=${{ inputs.branch_name }}" \
+          -var "prefix=${{ inputs.namespace }}" \
+          -var "postfix=${{ inputs.postfix }}" \
+          -var "environment=${{ inputs.environment }}" \
+          -var "image_digest=${{ inputs.image_digest }}" \
+          -var "client_secret=${{ env.ARM_CLIENT_SECRET }}"
       env:
         ARM_CLIENT_ID: ${{ secrets.clientId }}
         ARM_CLIENT_SECRET: ${{ secrets.clientSecret }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.subscriptionId }}
-        ARM_TENANT_ID: ${{ secrets.tenantId }}     
+        ARM_TENANT_ID: ${{ secrets.tenantId }}
     - name: Terraform Apply
       if: ${{ inputs.TFAction == 'apply'}}  
       run: terraform -chdir=${{ inputs.terraform_workingdir }} apply -input=false -auto-approve plan.tfplan 
