--- a/.github/workflows/tf-gha-install-terraform.yml
+++ b/.github/workflows/tf-gha-install-terraform.yml
@@ -383,7 +383,7 @@ jobs:
         ARM_CLIENT_ID: ${{ secrets.clientId }}
         ARM_CLIENT_SECRET: ${{ secrets.clientSecret }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.subscriptionId }}
-        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}     
+        ARM_TENANT_ID: ${{ secrets.tenantId }}     
     - name: Terraform Destroy
       if: ${{ inputs.TFAction == 'destroy' }} 
       run: terraform -chdir=${{ inputs.terraform_workingdir }} destroy -input=false -auto-approve
