--- a/.github/workflows/tf-gha-deploy-infra.yml
+++ b/.github/workflows/tf-gha-deploy-infra.yml
@@ -45,29 +45,29 @@ jobs:
     with:
       file_name: ${{ needs.set-env-branch.outputs.config-file}}
 
-  # get-latest-image-digest:
-  #   runs-on: ubuntu-latest
-  #   needs: set-branch-name
-  #   outputs:
-  #     latest_digest: ${{ steps.get_digest.outputs.latest_digest }}
-  #   env:
-  #     ACR_NAME: craot90002dev
-  #   steps:
-  #     - name: Log in to Azure
-  #       uses: azure/login@v1
-  #       with:
-  #         creds: ${{ secrets.AZURE_CREDENTIALS }}
+  get-latest-image-digest:
+    runs-on: ubuntu-latest
+    needs: set-branch-name
+    outputs:
+      latest_digest: ${{ steps.get_digest.outputs.latest_digest }}
+    env:
+      ACR_NAME: craota0002dev
+    steps:
+      - name: Log in to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-  #     - name: Get the latest image digest
-  #       id: get_digest
-  #       run: |
-  #         DIGEST=$(az acr repository show-manifests --name ${{ env.ACR_NAME }} --repository backend-${{ needs.set-branch-name.outputs.branch-name }} --query "[?tags[?contains(@, 'latest')]].digest" -o tsv)
-  #         echo "latest_digest=${DIGEST}" >> $GITHUB_ENV
-  #         echo "latest_digest=${DIGEST}" >> $GITHUB_OUTPUT
+      - name: Get the latest image digest
+        id: get_digest
+        run: |
+          DIGEST=$(az acr repository show-manifests --name ${{ env.ACR_NAME }} --repository backend-${{ needs.set-branch-name.outputs.branch-name }} --query "[?tags[?contains(@, 'latest')]].digest" -o tsv)
+          echo "latest_digest=${DIGEST}" >> $GITHUB_ENV
+          echo "latest_digest=${DIGEST}" >> $GITHUB_OUTPUT
 
   deploy-azure-resources:
-    # needs: [get-config, get-latest-image-digest, set-branch-name]
-    needs: [get-config, set-branch-name]
+    needs: [get-config, get-latest-image-digest, set-branch-name]
+    # needs: [get-config, set-branch-name]
     uses: ./.github/workflows/tf-gha-install-terraform.yml
     with:
       TFAction: "apply"
