--- a/config-infra-dev.yml
+++ b/config-infra-dev.yml
@@ -6,11 +6,11 @@ variables:
   # Global
   ap_vm_image: ubuntu-20.04
 
-  namespace: aot9 #Note: A namespace with many characters will cause storage account creation to fail due to storage account names having a limit of 24 characters.
+  namespace: aota #Note: A namespace with many characters will cause storage account creation to fail due to storage account names having a limit of 24 characters.
   postfix: 0002
   location: eastus
   environment: dev
-  acr_name: craot90002dev
+  acr_name: craota0002dev
 
 
 
