--- a/.github/workflows/tf-gha-deploy-infra.yml
+++ b/.github/workflows/tf-gha-deploy-infra.yml
@@ -51,7 +51,7 @@ jobs:
     outputs:
       latest_digest: ${{ steps.get_digest.outputs.latest_digest }}
     env:
-      ACR_NAME: craota0002dev
+      ACR_NAME: craotc0002dev
     steps:
       - name: Log in to Azure
         uses: azure/login@v1
