--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -24,6 +24,7 @@ jobs:
       env:
         AZURE_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
         AZURE_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        AZURE_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         AZURE_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
         AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
       steps:
