--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -34,17 +34,17 @@ jobs:
         - name: Install azd
           uses: Azure/setup-azd@v1.0.0
 
-        # - name: Log in with Azure (Federated Credentials)
-        #   if: ${{ env.AZURE_CLIENT_ID != '' }}
-        #   run: |
-        #     azd auth login `
-        #       --client-id "$Env:AZURE_CLIENT_ID" `
-        #       --federated-credential-provider "github" `
-        #       --tenant-id "$Env:AZURE_TENANT_ID"
-        #   shell: pwsh
+        - name: Log in with Azure (Federated Credentials)
+          if: ${{ env.AZURE_CLIENT_ID != '' }}
+          run: |
+            azd auth login `
+              --client-id "$Env:AZURE_CLIENT_ID" `
+              --federated-credential-provider "github" `
+              --tenant-id "$Env:AZURE_TENANT_ID"
+          shell: pwsh
 
-        # - name: Log in to Azure
-        #   run: az login --service-principal --username ${{ env.AZURE_CLIENT_ID }} --password ${{ env.AZURE_CLIENT_SECRET }} --tenant ${{ env.AZURE_TENANT_ID }}
+        - name: Log in to Azure
+          run: az login --service-principal --username ${{ env.AZURE_CLIENT_ID }} --password ${{ env.AZURE_CLIENT_SECRET }} --tenant ${{ env.AZURE_TENANT_ID }}
 
 
         - name: Log in with Azure (Client Credentials)
