added a random trimmer

--- a/frontend/art-of-tennis/package.json
+++ b/frontend/art-of-tennis/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.12.6",
+    "@ffmpeg/ffmpeg": "^0.12.10",
+    "@ffmpeg/util": "^0.12.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
