--- a/frontend/art-of-tennis/package.json
+++ b/frontend/art-of-tennis/package.json
@@ -12,6 +12,7 @@
     "@ffmpeg/core": "^0.12.6",
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
+    "classnames": "^2.5.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -21,8 +22,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
 }
