--- a/frontend/art-of-tennis/package.json
+++ b/frontend/art-of-tennis/package.json
@@ -13,6 +13,7 @@
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
     "classnames": "^2.5.1",
+    "cookie": "^0.6.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
