--- a/backend/tennis/requirements.txt
+++ b/backend/tennis/requirements.txt
@@ -1,77 +1,143 @@
-anyascii
-asgiref
-backports.zoneinfo
-beautifulsoup4
-certifi
-cffi
-charset-normalizer
-cryptography
-defusedxml
-Django
-django-cors-headers
-django-filter
-django-modelcluster
-django-oauth-toolkit
-django-permissionedforms
-django-taggit
-django-treebeard
-djangorestframework
-draftjs-exporter
-et-xmlfile
-filetype
-idna
-jwcrypto
-l18n
-laces
-oauthlib
-openpyxl
-pillow
-pillow-heif
-psycopg2-binary
-pycparser
-PyJWT
-python3-openid
-pytz
-requests
-requests-oauthlib
-six
-social-auth-app-django
-social-auth-core
-soupsieve
-sqlparse
-telepath
-typing-extensions
-urllib3
-wagtail
-willow
-
-azure-ai-ml
-azure-common
-azure-core
-azure-graphrbac
-azure-identity
-azure-mgmt-authorization
-azure-mgmt-containerregistry
-azure-mgmt-core
-azure-mgmt-keyvault
-azure-mgmt-network
-azure-mgmt-resource
-azure-mgmt-storage
-azure-storage-blob
-azure-storage-file-datalake
-azure-storage-file-share
-azureml-core
-azureml-dataprep
-azureml-dataprep-native
-azureml-dataprep-rslex
-msrestazure
-opencensus-ext-azure
-
-pandas
-wagtailmedia
-opencv-python
-celery
-redis
-
-gunicorn
-django-storages[azure]
+adal==1.2.7
+amqp==5.2.0
+anyascii==0.3.2
+argcomplete==3.5.0
+asgiref==3.8.1
+async-timeout==4.0.3
+attrs==24.2.0
+azure-ai-ml==1.19.0
+azure-common==1.1.28
+azure-core==1.30.2
+azure-graphrbac==0.61.1
+azure-identity==1.17.1
+azure-mgmt-authorization==4.0.0
+azure-mgmt-containerregistry==10.3.0
+azure-mgmt-core==1.4.0
+azure-mgmt-keyvault==10.3.1
+azure-mgmt-network==26.0.0
+azure-mgmt-resource==23.1.1
+azure-mgmt-storage==21.2.1
+azure-storage-blob==12.22.0
+azure-storage-file-datalake==12.16.0
+azure-storage-file-share==12.17.0
+azureml-core==1.57.0
+azureml-dataprep==5.2.0
+azureml-dataprep-native==41.0.0
+azureml-dataprep-rslex==2.23.3
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+backports.zoneinfo==0.2.1
+bcrypt==4.2.0
+beautifulsoup4==4.12.3
+billiard==4.2.0
+cachetools==5.5.0
+celery==5.4.0
+certifi==2024.7.4
+cffi==1.17.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cloudpickle==2.2.1
+colorama==0.4.6
+contextlib2==21.6.0
+cryptography==43.0.0
+defusedxml==0.7.1
+Django==4.2.15
+django-cors-headers==4.4.0
+django-filter==24.3
+django-modelcluster==6.3
+django-oauth-toolkit==2.4.0
+django-permissionedforms==0.1
+django-storages==1.14.4
+django-taggit==6.0.0
+django-treebeard==4.7.1
+djangorestframework==3.15.2
+docker==7.1.0
+draftjs-exporter==5.0.0
+et-xmlfile==1.1.0
+filetype==1.2.0
+google-api-core==2.19.1
+google-auth==2.34.0
+googleapis-common-protos==1.63.2
+gunicorn==23.0.0
+humanfriendly==10.0
+idna==3.8
+importlib-resources==6.4.4
+isodate==0.6.1
+jeepney==0.8.0
+jmespath==1.0.1
+jsonpickle==3.2.2
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jwcrypto==1.5.6
+knack==0.11.0
+kombu==5.4.0
+l18n==2021.3
+laces==0.1.1
+marshmallow==3.22.0
+msal==1.30.0
+msal-extensions==1.2.0
+msrest==0.7.1
+msrestazure==0.6.4.post1
+ndg-httpsclient==0.5.1
+numpy==1.24.4
+oauthlib==3.2.2
+opencensus==0.11.4
+opencensus-context==0.1.3
+opencensus-ext-azure==1.1.13
+opencensus-ext-logging==0.1.1
+opencv-python==4.10.0.84
+openpyxl==3.1.5
+packaging==24.1
+pandas==2.0.3
+paramiko==3.4.1
+pathspec==0.12.1
+pillow==10.4.0
+pillow-heif==0.18.0
+pkginfo==1.11.1
+pkgutil-resolve-name==1.3.10
+portalocker==2.10.1
+prompt-toolkit==3.0.47
+proto-plus==1.24.0
+protobuf==5.27.3
+psutil==6.0.0
+psycopg2-binary==2.9.9
+pyasn1==0.6.0
+pyasn1-modules==0.4.0
+pycparser==2.22
+pydash==8.0.3
+pygments==2.18.0
+PyJWT==2.9.0
+PyNaCl==1.5.0
+pyOpenSSL==24.2.1
+python-dateutil==2.9.0.post0
+python3-openid==3.2.0
+pytz==2024.1
+PyYAML==6.0.2
+redis==5.0.8
+referencing==0.35.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rpds-py==0.20.0
+rsa==4.9
+SecretStorage==3.3.3
+six==1.16.0
+social-auth-app-django==5.4.2
+social-auth-core==4.5.4
+soupsieve==2.6
+sqlparse==0.5.1
+strictyaml==1.7.3
+tabulate==0.9.0
+telepath==0.3.1
+tqdm==4.66.5
+typing-extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+vine==5.1.0
+wagtail==6.2.1
+wagtailmedia==0.15.2
+wcwidth==0.2.13
+willow==1.8.0
+zipp==3.20.0
