--- a/backend/tennis/requirements.txt
+++ b/backend/tennis/requirements.txt
@@ -43,6 +43,7 @@ cloudpickle==2.2.1
 colorama==0.4.6
 contextlib2==21.6.0
 cryptography==43.0.0
+decorator==4.4.2
 defusedxml==0.7.1
 Django==4.2.15
 django-cors-headers==4.4.0
@@ -64,6 +65,8 @@ googleapis-common-protos==1.63.2
 gunicorn==23.0.0
 humanfriendly==10.0
 idna==3.8
+imageio==2.35.1
+imageio-ffmpeg==0.5.1
 importlib-resources==6.4.4
 isodate==0.6.1
 jeepney==0.8.0
@@ -77,6 +80,7 @@ kombu==5.4.0
 l18n==2021.3
 laces==0.1.1
 marshmallow==3.22.0
+moviepy==1.0.3
 msal==1.30.0
 msal-extensions==1.2.0
 msrest==0.7.1
@@ -99,6 +103,7 @@ pillow-heif==0.18.0
 pkginfo==1.11.1
 pkgutil-resolve-name==1.3.10
 portalocker==2.10.1
+proglog==0.1.10
 prompt-toolkit==3.0.47
 proto-plus==1.24.0
 protobuf==5.27.3
@@ -141,5 +146,3 @@ wagtailmedia==0.15.2
 wcwidth==0.2.13
 willow==1.8.0
 zipp==3.20.0
-
-moviepy
