--- a/frontend/art-of-tennis/package.json
+++ b/frontend/art-of-tennis/package.json
@@ -14,10 +14,13 @@
     "@ffmpeg/util": "^0.12.1",
     "classnames": "^2.5.1",
     "cookie": "^0.6.0",
+    "lucide-react": "^0.441.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
