--- a/frontend/art-of-tennis/package.json
+++ b/frontend/art-of-tennis/package.json
@@ -12,6 +12,7 @@
     "@ffmpeg/core": "^0.12.6",
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
+    "@hookform/resolvers": "^3.9.0",
     "classnames": "^2.5.1",
     "cookie": "^0.6.0",
     "lucide-react": "^0.441.0",
@@ -19,8 +20,10 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
