--- a/frontend/art-of-tennis/package.json
+++ b/frontend/art-of-tennis/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.53.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "swr": "^2.2.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
