--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -61,12 +61,18 @@ jobs:
         #   env:
         #     AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
 
+        - name: Prevent removing custom domains
+          run: azd config set alpha.aca.persistDomains on --no-prompt
+
         - name: Provision Infrastructure
           run: azd provision --no-prompt
           env:
             AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
             AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
             AZURE_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          
+        - name: Verify custom domains persistence configuration
+          run: azd config get alpha.aca.persistDomains
 
         - name: Deploy Application
           run: azd deploy --no-prompt
